can-socket/tests/compile-fail/standard_id_too_high.rs
fn main() {
	let _id = can_socket::standard_id!(0x800);
}
